# open-video-intelligence

./: .gitignore  CMakeLists.txt  README.md  cmake_uninstall.cmake.in  contribution.md  open-video-intelligence.manifest  ovi_build.sh  ovi_gcov.sh  ovi_unittest.sh
.github/workflows/: build_test.yml
config/: CMakeLists.txt  ovi.ini.in  ovi.pc.in
include/: Accumulator.h  AttributeValidator.h  AvSynchronizer.h  Callback.h  Configuration.h  DataAnalyzer.h  DataFlow.h  Exception.h  FormatConverterAudioFFMPEG.h  FormatConverterFactory.h  FormatConverterVideoFFMPEG.h  FrameExtractorFFMPEG.h  FrameExtractorFactory.h  FramePack.h  FramePackerFFMPEG.h  FramePackerFactory.h  IFormatConverter.h  IFrameExtractor.h  IFramePacker.h  IPlugin.h  IPluginEffect.h  IPluginProcess.h  IPluginRender.h  Log.h  LogicAnalyzer.h  MediaInfo.h  MediaInfoFFMPEG.h  OutcomeCache.h  PerformanceMeasure.h  PluginLoader.h  PluginManager.h  PyManager.h  PyPluginProcess.h  RenderTask.h  Session.h  StdLog.h  ThreadRunner.h  TimelineHelper.h  Types.h  ovi.h  (+1 more)
packaging/: open-video-intelligence.spec
plugins/: CMakeLists.txt  README.md
plugins/audioDetect/: CMakeLists.txt  audioDetect.cpp
plugins/audioDetectPy/: CMakeLists.txt  audioDetect.py
plugins/audioEffectMarker/: CMakeLists.txt  audioEffectMarker.cpp
plugins/faceDetect/: CMakeLists.txt  faceDetect.cpp
plugins/faceDetectPy/: CMakeLists.txt  faceDetect.py
plugins/ffmpegRender/: CMakeLists.txt  ffmpegEffect.cpp  ffmpegRender.cpp
plugins/ffmpegRender/include/: ffmpegEffect.h
plugins/objectDetectPy/: CMakeLists.txt  objectDetect.py
plugins/otioRender/: CMakeLists.txt  otioRender.cpp
plugins/srcs/: OVICommon.py
plugins/videoEffectMarker/: CMakeLists.txt  videoEffectMarker.cpp
python/: README.md  ovi.py  ovi_launcher  ut.py
src/: Accumulator.cpp  AttributeValidator.cpp  AvSynchronizer.cpp  Callback.cpp  DataAnalyzer.cpp  DataFlow.cpp  FormatConverterAudioFFMPEG.cpp  FormatConverterFactory.cpp  FormatConverterVideoFFMPEG.cpp  FrameExtractorFFMPEG.cpp  FrameExtractorFactory.cpp  FramePack.cpp  FramePackerFFMPEG.cpp  FramePackerFactory.cpp  Log.cpp  LogicAnalyzer.cpp  MediaInfo.cpp  OutcomeCache.cpp  PerformanceMeasure.cpp  PluginLoader.cpp  PluginManager.cpp  PyManager.cpp  PyPluginProcess.cpp  RenderTask.cpp  Session.cpp  ThreadRunner.cpp  TimelineHelper.cpp  ovi.cpp
templates/: README.md  gen
tests/unittest/: CMakeLists.txt  accumulatorTest.cpp  formatConverterTest.cpp  frameExtractorTest.cpp  logicAnalyzerTest.cpp  outcomeCacheTest.cpp  pluginLoaderTest.cpp  sessionTest.cpp  timelineHelperTest.cpp  utBase.h  utMain.cpp
tests/unittest/resource/: audio_2_44100_1024_1.raw  audio_2_44100_1024_11.raw  audio_2_44100_1024_12.raw  audio_2_44100_1024_2.raw  audio_2_44100_1024_3.raw  audio_2_44100_1024_4.raw  audio_2_44100_1024_5.raw  audio_2_44100_1024_6.raw  audio_2_44100_1024_7.raw  audio_2_44100_1024_8.raw  audio_2_44100_1024_9.raw  audio_fltp_2_44100_1024.raw  video_360x360_1.raw  video_360x360_10.raw  video_360x360_11.raw  video_360x360_2.raw  video_360x360_3.raw  video_360x360_4.raw  video_360x360_5.raw  video_360x360_6.raw  video_360x360_7.raw  video_360x360_8.raw  video_360x360_9.raw
tools/: CMakeLists.txt  README.md  py_import_tester
tools/ovi_plugins/: CMakeLists.txt  ovi_plugins.c
tools/ovi_session/: CMakeLists.txt  ovi_session.cpp
