ADD_SUBDIRECTORY(audioDetect)
ADD_SUBDIRECTORY(faceDetect)
ADD_SUBDIRECTORY(otioRender)
ADD_SUBDIRECTORY(ffmpegRender)
ADD_SUBDIRECTORY(audioEffectMarker)
ADD_SUBDIRECTORY(videoEffectMarker)
IF(ENABLE_PYTHON)
ADD_SUBDIRECTORY(audioDetectPy)
ADD_SUBDIRECTORY(faceDetectPy)
ENDIF(ENABLE_PYTHON)

IF(ENABLE_PYTHON)
SET(PLUGIN_SUB_DIRS "srcs" "models")
ELSE(ENABLE_PYTHON)
SET(PLUGIN_SUB_DIRS "models")
ENDIF(ENABLE_PYTHON)
INSTALL(
    DIRECTORY ${PLUGIN_SUB_DIRS}
    DESTINATION ${PLUGIN_INSTALL_DIR}
    OPTIONAL
)

IF(ENABLE_PYTHON)
INSTALL(
    FILES "__init__.py"
    DESTINATION ${PLUGIN_INSTALL_DIR}
)
ENDIF(ENABLE_PYTHON)
