SET(TARGET_LIB audio_detect)

ADD_LIBRARY(${TARGET_LIB} SHARED audioDetect.cpp)

SET(PLUGINS_FLAGS "${PLUGINS_FLAGS} -DENABLE_AUDIODETECT" CACHE STRING "" FORCE)
INSTALL(TARGETS ${TARGET_LIB} DESTINATION ${PLUGIN_INSTALL_DIR})

INSTALL(
	DIRECTORY "srcs" "models"
	DESTINATION ${PLUGIN_INSTALL_DIR}
    OPTIONAL
)
