SET(TARGET_LIB face_detect)

FIND_PACKAGE(OpenCV)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

IF(NOT OpenCV_FOUND)
MESSAGE("OpenCV not found")
ELSE()
ADD_LIBRARY(${TARGET_LIB} SHARED faceDetect.cpp)

SET(PLUGINS_FLAGS "${PLUGINS_FLAGS} -DENABLE_FACEDETECT" CACHE STRING "" FORCE)

TARGET_LINK_LIBRARIES(${TARGET_LIB} ${OpenCV_LIBS})

INSTALL(TARGETS ${TARGET_LIB} DESTINATION ${PLUGIN_INSTALL_DIR})

INSTALL(
	DIRECTORY "srcs" "models"
	DESTINATION ${PLUGIN_INSTALL_DIR}
    OPTIONAL
)

ENDIF()
