SET(TARGET_LIB ffmpeg_render)
SET(FFMPEG_PKG libavutil libswscale libavcodec libavformat)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(FFMPEG ${FFMPEG_PKG})

IF(NOT FFMPEG_FOUND)
    MESSAGE("${FFMPEG_PKG} not found")
ELSE()
SET(INC_DIR include)
INCLUDE_DIRECTORIES(${INC_DIR})

ADD_LIBRARY(${TARGET_LIB} SHARED ffmpegRender.cpp ffmpegEffect.cpp)

SET(PLUGINS_FLAGS "${PLUGINS_FLAGS} -DENABLE_FFMPEGRENDER" CACHE STRING "" FORCE)

TARGET_INCLUDE_DIRECTORIES(${TARGET_LIB} PUBLIC ${IMATH_INCLUDE_DIRS})
INSTALL(TARGETS ${TARGET_LIB} DESTINATION ${PLUGIN_INSTALL_DIR})
ENDIF()
