SET(REQUIRES_LIST ${REQUIRES_LIST}
    gtest
    gmock
)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(GTEST_PKG ${REQUIRES_LIST})

IF(NOT GTEST_PKG_FOUND)
    MESSAGE("${REQUIRES_LIST} not found")
ELSE()  # GTEST_PKG_FOUND
FOREACH(flag ${GTEST_PKG_CFLAGS})
    SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${PLUGINS_FLAGS} -Wall -fPIE")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie")

FILE(GLOB GTEST_TEST_SRCS *.cpp)
SET(GTEST_TEST_SRCS ${GTEST_TEST_SRCS})

ADD_EXECUTABLE(ovi_ut ${GTEST_TEST_SRCS})
TARGET_LINK_LIBRARIES(ovi_ut ${FW_NAME} ${GTEST_PKG_LDFLAGS} -ldl)

ENDIF()  # GTEST_PKG_FOUND