SET(REQUIRES_LIST ${REQUIRES_LIST}
    glib-2.0
    gio-2.0
)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(GLIB_PKG ${REQUIRES_LIST})

IF(NOT GLIB_PKG_FOUND)
MESSAGE("${REQUIRES_LIST} not found")
ELSE()
FOREACH(flag ${GLIB_PKG_CFLAGS})
    SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -Wall -pie -Werror")

AUX_SOURCE_DIRECTORY(. TEST_SRCS)
FOREACH(TEST_SRC ${TEST_SRCS})
    GET_FILENAME_COMPONENT(TEST_NAME ${TEST_SRC} NAME_WE)
    MESSAGE("${TEST_NAME}")
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_SRC})
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${FW_NAME} ${GLIB_PKG_LDFLAGS})
    INSTALL(TARGETS ${TEST_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
ENDFOREACH()
ENDIF()
