SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -Wall -pie -Werror")

AUX_SOURCE_DIRECTORY(. TEST_SRCS)
FOREACH(TEST_SRC ${TEST_SRCS})
    GET_FILENAME_COMPONENT(TEST_NAME ${TEST_SRC} NAME_WE)
    MESSAGE("${TEST_NAME}")
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_SRC})
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${FW_NAME})
    INSTALL(TARGETS ${TEST_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
ENDFOREACH()
